Repointed to Macro PR

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,12 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name:  caksoylar
+      url-base: https://github.com/caksoylar
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: caksoylar
+      revision: rebased-macros
       import: app/west.yml
   self:
     path: config
